k8s/cores/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-rewrite
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:

  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth(/|$)(.*)
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - pathType: Prefix
            path: /candidate(/|$)(.*)
            backend:
              service:
                name: candidate-service
                port:
                  number: 80
          - pathType: Prefix
            path: /search(/|$)(.*)
            backend:
              service:
                name: search-service
                port:
                  number: 80
          - pathType: Prefix
            path: /job(/|$)(.*)
            backend:
              service:
                name: job-service
                port:
                  number: 80
          - pathType: Prefix
            path: /recruiter(/|$)(.*)
            backend:
              service:
                name: recruiter-service
                port:
                  number: 80
